Fixed annotation drawer label clipping on scroll.

--- a/src/components/song/AnnotationContainer.css
+++ b/src/components/song/AnnotationContainer.css
@@ -23,3 +23,7 @@
     
   }
   
+
+.ui.top.attached.label:first-child+:not(.attached) {
+    margin-top: 3.6rem!important;
+}
